removed unnecessary files and added data download script

--- a/ReproduceNCES.ipynb
+++ b/ReproduceNCES.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "suburban-sheep",
+   "id": "fleet-island",
    "metadata": {},
    "source": [
     "## Evaluate NCES"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "about-monaco",
+   "id": "material-canadian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +34,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "id": "current-contributor",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import os\n",
+    "#import shutil\n",
+    "#for kb in ['family-benchmark', 'semantic_bible']:\n",
+    "#    for rep in os.listdir(f\"Method/Datasets/{kb}\"):\n",
+    "#        if not rep in [\"Train_data\", \"Test_data\", f\"{kb}.owl\"]:\n",
+    "#            if rep == \".gitattributes\":\n",
+    "#                os.remove(f\"Method/Datasets/{kb}/{rep}\")\n",
+    "#            else:\n",
+    "#                shutil.rmtree(f\"Method/Datasets/{kb}/{rep}\")\n",
+    "#    #!rm -r f\"Method/Datasets/{kb}/Embeddings/\" "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
-   "id": "handy-leadership",
+   "id": "diagnostic-dialogue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "infinite-cattle",
+   "id": "exact-practice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "worst-backing",
+   "id": "continental-terrace",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "middle-spouse",
+   "id": "legitimate-benjamin",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "charged-chart",
+   "id": "right-sullivan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "interesting-disclosure",
+   "id": "accessible-junction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "aggregate-arbitration",
+   "id": "alleged-aberdeen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,18 +318,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "private-windsor",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_pred = 'Iodine ⊔ ∃inBond.'"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
-   "id": "discrete-bracket",
+   "id": "endless-soldier",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "delayed-collective",
+   "id": "hazardous-smell",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "blessed-station",
+   "id": "positive-richardson",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "imported-cleaning",
+   "id": "straight-remainder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "billion-genesis",
+   "id": "small-harvest",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interracial-halifax",
+   "id": "hired-breeding",
    "metadata": {},
    "outputs": [],
    "source": []
