remove unused files

--- a/write_results.ipynb
+++ b/write_results.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "reflected-phenomenon",
+   "id": "dated-aggregate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "derived-hepatitis",
+   "id": "individual-skating",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,22 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "transparent-recipient",
+   "id": "international-depression",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maybe_add_zero(mean, std):\n",
+    "    if len(mean.split('.')[-1]) == 1:\n",
+    "        mean += '0'\n",
+    "    if len(std.split('.')[-1]) == 1:\n",
+    "        std += '0'\n",
+    "    return mean, std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "automotive-necessity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,30 +66,31 @@
     "    for kb in ['carcinogenesis', 'mutagenesis', 'semantic_bible', 'vicodi']:\n",
     "        for model in ['celoe', 'eltl', 'ecii', 'evolearner', f'NCES_{kb_emb_model}', f'NCES_{kb_emb_model}_Ensemble']:\n",
     "            if model not in [f'NCES_{kb_emb_model}', f'NCES_{kb_emb_model}_Ensemble']:\n",
-    "                with open(f'datasets/{kb}/Results/concept_learning_avg_results__{model}.json') as file:\n",
-    "                    results = json.load(file)\n",
     "                rename_model = model.upper() if model != 'evolearner' else 'EvoLearner'\n",
-    "                if model == 'ecii':\n",
-    "                    if metric != 'Accuracy':\n",
-    "                        Res[metric][' '.join(word.capitalize() for word in kb.split('_'))][rename_model] =\\\n",
-    "                    str(round(100*results[metric]['mean'],2))+'$\\pm$'+str(round(100*results[metric]['std'],2))\n",
-    "                    else:\n",
-    "                        Res[metric][' '.join(word.capitalize() for word in kb.split('_'))][rename_model] =\\\n",
-    "                    '-'+'$\\pm$'+'-'\n",
-    "                else:\n",
-    "                    Res[metric][' '.join(word.capitalize() for word in kb.split('_'))][rename_model] =\\\n",
-    "                    str(round(results[metric]['mean'],2))+'$\\pm$'+str(round(results[metric]['std'],2))\n",
+    "                with open(f'datasets/{kb}/Results/{rename_model}_avg_results.json') as file:\n",
+    "                    results = json.load(file)\n",
+    "                mean = str(round(results[metric]['mean'],2)); std = str(round(results[metric]['std'],2))\n",
+    "                mean, std = maybe_add_zero(mean, std)\n",
+    "                Res[metric][' '.join(word.capitalize() for word in kb.split('_'))][rename_model] = mean+'$\\pm$'+std\n",
     "            elif model == f'NCES_{kb_emb_model}':\n",
-    "                with open(f'datasets/{kb}/Results/{model}.json') as file:\n",
+    "                path = f'datasets/{kb}/Results/{model}.json'\n",
+    "                if kb_emb_model == \"DistMult\":\n",
+    "                    path = f'datasets/{kb}/Results/{model}_{kb_emb_model}.json'\n",
+    "                with open(path) as file:\n",
     "                    results = json.load(file)\n",
     "                new_metric = rename_metric(metric)\n",
-    "                for m in results:\n",
+    "                for m in results: \n",
     "                    inducing_points = m.split(\"I\")[-1]\n",
     "                    rename_model = 'NCES$_{m\\\\text{='+inducing_points+'}}$'\n",
-    "                    Res[metric][' '.join(word.capitalize() for word in kb.split('_'))][rename_model] =\\\n",
-    "                    str(round(results[m][new_metric]['mean'][0],2))+'$\\pm$'+str(round(results[m][new_metric]['std'][0],2))\n",
+    "                    mean = str(round(results[m][new_metric]['mean'][0],2))\n",
+    "                    std = str(round(results[m][new_metric]['std'][0],2))\n",
+    "                    mean, std = maybe_add_zero(mean, std)\n",
+    "                    Res[metric][' '.join(word.capitalize() for word in kb.split('_'))][rename_model] = mean+'$\\pm$'+std\n",
     "            elif model == f'NCES_{kb_emb_model}_Ensemble':\n",
-    "                with open(f'datasets/{kb}/Results/{model}.json') as file:\n",
+    "                path = f'datasets/{kb}/Results/{model}.json'\n",
+    "                if kb_emb_model == \"DistMult\":\n",
+    "                    path = f'datasets/{kb}/Results/NCES_DistMult_Ensemble.json'\n",
+    "                with open(path) as file:\n",
     "                    results = json.load(file)\n",
     "                new_metric = rename_metric(metric)\n",
     "                for m in results:\n",
@@ -86,15 +102,16 @@
     "                        else:\n",
     "                            new_name += 'm\\\\text{='+ind_pt+'}'\n",
     "                    rename_model = 'NCES$_{'+new_name+'}$'\n",
-    "                    Res[metric][' '.join(word.capitalize() for word in kb.split('_'))][rename_model] =\\\n",
-    "                    str(round(results[m][new_metric]['mean'][0],2))+'$\\pm$'+str(round(results[m][new_metric]['std'][0],2))\n",
+    "                    mean = str(round(results[m][new_metric]['mean'][0],2)); std = str(round(results[m][new_metric]['std'][0],2))\n",
+    "                    mean, std = maybe_add_zero(mean, std)\n",
+    "                    Res[metric][' '.join(word.capitalize() for word in kb.split('_'))][rename_model] = mean+'$\\pm$'+std\n",
     "    return Res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "medical-oracle",
+   "execution_count": 5,
+   "id": "invisible-thread",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,60 +120,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "urban-silicon",
+   "execution_count": 6,
+   "id": "early-shame",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'F-measure': {'Carcinogenesis': {'CELOE': '63.59$\\\\pm$38.31',\n",
-       "   'ELTL': '38.14$\\\\pm$31.58',\n",
-       "   'ECII': '37.12$\\\\pm$39.03',\n",
-       "   'EvoLearner': '89.24$\\\\pm$18.53',\n",
-       "   'NCES$_{m\\\\text{=32}}$': '89.77$\\\\pm$27.82',\n",
-       "   'NCES$_{m\\\\text{=64}}$': '91.76$\\\\pm$23.86',\n",
-       "   'NCES$_{m\\\\text{=128}}$': '89.89$\\\\pm$26.58',\n",
-       "   'NCES$_{m\\\\text{=32+}m\\\\text{=64}}$': '94.38$\\\\pm$21.25',\n",
-       "   'NCES$_{m\\\\text{=32+}m\\\\text{=128}}$': '93.12$\\\\pm$23.52',\n",
-       "   'NCES$_{m\\\\text{=64+}m\\\\text{=128}}$': '93.08$\\\\pm$23.71',\n",
-       "   'NCES$_{m\\\\text{=32+}m\\\\text{=64+}m\\\\text{=128}}$': '94.71$\\\\pm$21.24'},\n",
-       "  'Mutagenesis': {'CELOE': '98.74$\\\\pm$4.53',\n",
-       "   'ELTL': '47.07$\\\\pm$34.66',\n",
-       "   'ECII': '43.65$\\\\pm$41.22',\n",
-       "   'EvoLearner': '90.39$\\\\pm$10.22',\n",
-       "   'NCES$_{m\\\\text{=32}}$': '77.49$\\\\pm$35.75',\n",
-       "   'NCES$_{m\\\\text{=64}}$': '79.65$\\\\pm$28.45',\n",
-       "   'NCES$_{m\\\\text{=128}}$': '81.62$\\\\pm$32.77',\n",
-       "   'NCES$_{m\\\\text{=32+}m\\\\text{=64}}$': '85.97$\\\\pm$27.96',\n",
-       "   'NCES$_{m\\\\text{=32+}m\\\\text{=128}}$': '93.33$\\\\pm$15.02',\n",
-       "   'NCES$_{m\\\\text{=64+}m\\\\text{=128}}$': '87.95$\\\\pm$26.75',\n",
-       "   'NCES$_{m\\\\text{=32+}m\\\\text{=64+}m\\\\text{=128}}$': '90.92$\\\\pm$21.39'},\n",
-       "  'Semantic Bible': {'CELOE': '97.86$\\\\pm$6.88',\n",
-       "   'ELTL': '31.82$\\\\pm$29.95',\n",
-       "   'ECII': '48.12$\\\\pm$40.57',\n",
-       "   'EvoLearner': '94.5$\\\\pm$8.2',\n",
-       "   'NCES$_{m\\\\text{=32}}$': '85.47$\\\\pm$27.78',\n",
-       "   'NCES$_{m\\\\text{=64}}$': '71.52$\\\\pm$37.94',\n",
-       "   'NCES$_{m\\\\text{=128}}$': '64.35$\\\\pm$39.9',\n",
-       "   'NCES$_{m\\\\text{=32+}m\\\\text{=64}}$': '77.13$\\\\pm$37.33',\n",
-       "   'NCES$_{m\\\\text{=32+}m\\\\text{=128}}$': '81.04$\\\\pm$32.04',\n",
-       "   'NCES$_{m\\\\text{=64+}m\\\\text{=128}}$': '86.07$\\\\pm$28.89',\n",
-       "   'NCES$_{m\\\\text{=32+}m\\\\text{=64+}m\\\\text{=128}}$': '83.5$\\\\pm$29.94'},\n",
-       "  'Vicodi': {'CELOE': '63.66$\\\\pm$34.91',\n",
-       "   'ELTL': '35.48$\\\\pm$34.06',\n",
-       "   'ECII': '89.07$\\\\pm$23.01',\n",
-       "   'EvoLearner': '91.54$\\\\pm$13.21',\n",
-       "   'NCES$_{m\\\\text{=32}}$': '92.15$\\\\pm$23.66',\n",
-       "   'NCES$_{m\\\\text{=64}}$': '89.75$\\\\pm$26.69',\n",
-       "   'NCES$_{m\\\\text{=128}}$': '89.56$\\\\pm$26.3',\n",
-       "   'NCES$_{m\\\\text{=32+}m\\\\text{=64}}$': '97.55$\\\\pm$11.64',\n",
-       "   'NCES$_{m\\\\text{=32+}m\\\\text{=128}}$': '97.62$\\\\pm$13.1',\n",
-       "   'NCES$_{m\\\\text{=64+}m\\\\text{=128}}$': '97.3$\\\\pm$13.57',\n",
-       "   'NCES$_{m\\\\text{=32+}m\\\\text{=64+}m\\\\text{=128}}$': '97.89$\\\\pm$12.19'}}}"
+       "{'F-measure': {'Carcinogenesis': {'CELOE': '29.24$\\\\pm$39.22',\n",
+       "   'ELTL': '14.46$\\\\pm$28.48',\n",
+       "   'ECII': '18.91$\\\\pm$31.46',\n",
+       "   'EvoLearner': '89.34$\\\\pm$15.80',\n",
+       "   'NCES$_{m\\\\text{=32}}$': '83.56$\\\\pm$33.11',\n",
+       "   'NCES$_{m\\\\text{=64}}$': '83.92$\\\\pm$33.16',\n",
+       "   'NCES$_{m\\\\text{=128}}$': '86.06$\\\\pm$32.63',\n",
+       "   'NCES$_{m\\\\text{=32+}m\\\\text{=64}}$': '92.13$\\\\pm$24.61',\n",
+       "   'NCES$_{m\\\\text{=32+}m\\\\text{=128}}$': '91.01$\\\\pm$26.80',\n",
+       "   'NCES$_{m\\\\text{=64+}m\\\\text{=128}}$': '92.57$\\\\pm$24.08',\n",
+       "   'NCES$_{m\\\\text{=32+}m\\\\text{=64+}m\\\\text{=128}}$': '91.29$\\\\pm$24.96'},\n",
+       "  'Mutagenesis': {'CELOE': '74.46$\\\\pm$37.59',\n",
+       "   'ELTL': '36.33$\\\\pm$34.98',\n",
+       "   'ECII': '34.33$\\\\pm$31.53',\n",
+       "   'EvoLearner': '95.37$\\\\pm$8.02',\n",
+       "   'NCES$_{m\\\\text{=32}}$': '76.79$\\\\pm$38.61',\n",
+       "   'NCES$_{m\\\\text{=64}}$': '78.25$\\\\pm$37.18',\n",
+       "   'NCES$_{m\\\\text{=128}}$': '73.21$\\\\pm$38.31',\n",
+       "   'NCES$_{m\\\\text{=32+}m\\\\text{=64}}$': '83.09$\\\\pm$34.04',\n",
+       "   'NCES$_{m\\\\text{=32+}m\\\\text{=128}}$': '86.33$\\\\pm$31.54',\n",
+       "   'NCES$_{m\\\\text{=64+}m\\\\text{=128}}$': '84.18$\\\\pm$32.30',\n",
+       "   'NCES$_{m\\\\text{=32+}m\\\\text{=64+}m\\\\text{=128}}$': '85.12$\\\\pm$32.28'},\n",
+       "  'Semantic Bible': {'CELOE': '88.60$\\\\pm$19.50',\n",
+       "   'ELTL': '35.21$\\\\pm$31.74',\n",
+       "   'ECII': '32.79$\\\\pm$32.18',\n",
+       "   'EvoLearner': '88.38$\\\\pm$12.50',\n",
+       "   'NCES$_{m\\\\text{=32}}$': '70.77$\\\\pm$33.73',\n",
+       "   'NCES$_{m\\\\text{=64}}$': '71.77$\\\\pm$34.03',\n",
+       "   'NCES$_{m\\\\text{=128}}$': '69.95$\\\\pm$36.13',\n",
+       "   'NCES$_{m\\\\text{=32+}m\\\\text{=64}}$': '79.40$\\\\pm$32.22',\n",
+       "   'NCES$_{m\\\\text{=32+}m\\\\text{=128}}$': '77.80$\\\\pm$34.52',\n",
+       "   'NCES$_{m\\\\text{=64+}m\\\\text{=128}}$': '78.92$\\\\pm$32.84',\n",
+       "   'NCES$_{m\\\\text{=32+}m\\\\text{=64+}m\\\\text{=128}}$': '77.00$\\\\pm$35.25'},\n",
+       "  'Vicodi': {'CELOE': '22.63$\\\\pm$35.21',\n",
+       "   'ELTL': '8.58$\\\\pm$22.94',\n",
+       "   'ECII': '29.20$\\\\pm$30.81',\n",
+       "   'EvoLearner': '76.99$\\\\pm$26.37',\n",
+       "   'NCES$_{m\\\\text{=32}}$': '82.36$\\\\pm$32.05',\n",
+       "   'NCES$_{m\\\\text{=64}}$': '82.64$\\\\pm$31.28',\n",
+       "   'NCES$_{m\\\\text{=128}}$': '83.50$\\\\pm$30.85',\n",
+       "   'NCES$_{m\\\\text{=32+}m\\\\text{=64}}$': '90.67$\\\\pm$24.07',\n",
+       "   'NCES$_{m\\\\text{=32+}m\\\\text{=128}}$': '87.68$\\\\pm$26.48',\n",
+       "   'NCES$_{m\\\\text{=64+}m\\\\text{=128}}$': '86.49$\\\\pm$29.33',\n",
+       "   'NCES$_{m\\\\text{=32+}m\\\\text{=64+}m\\\\text{=128}}$': '91.06$\\\\pm$23.97'}}}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,8 +184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "greater-parliament",
+   "execution_count": 5,
+   "id": "automatic-outreach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,15 +197,15 @@
     "            file.write(\"\\t\\t\\\\toprule\\n\")\n",
     "            file.write(\"\\t\\t& \\\\multicolumn{4}{c}{\"+\"$\"+metric+\"(\\%)$}\\\\\\\\\\n\")\n",
     "            file.write(\"\\t\\t&\"+\" & \".join([\"\\\\textbf{\"+kb+\"}\" for kb in data[key]])+\"\\\\\\\\\\n\")\n",
-    "            file.write(\"\\\\midrule\\n\")\n",
+    "            file.write(\"\\t\\t\\\\midrule\\n\")\n",
     "            for model in data[key]['Carcinogenesis']:\n",
     "                file.write(\"\\t\\t\"+model+\" & \"+\" & \".join([data[key][kb][model] for kb in data[key]])+\"\\\\\\\\\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "warming-christmas",
+   "execution_count": 16,
+   "id": "cultural-album",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,8 +214,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "gothic-receipt",
+   "execution_count": 17,
+   "id": "gentle-regression",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,8 +224,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "cosmetic-sunday",
+   "execution_count": 18,
+   "id": "satisfied-twelve",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,15 +235,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "desperate-windsor",
+   "id": "looking-friendship",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "thrown-arrangement",
+   "execution_count": 9,
+   "id": "isolated-spell",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,8 +252,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "renewable-prague",
+   "execution_count": 10,
+   "id": "restricted-palace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,8 +262,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "assumed-macedonia",
+   "execution_count": 11,
+   "id": "prescribed-prompt",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "incorporate-adventure",
+   "id": "honey-moscow",
    "metadata": {},
    "outputs": [],
    "source": []
