rename modules appropriately

--- a/write_results.ipynb
+++ b/write_results.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dated-aggregate",
+   "id": "fresh-image",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "individual-skating",
+   "id": "accurate-captain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "international-depression",
+   "id": "accepting-mileage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "automotive-necessity",
+   "id": "thorough-economy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,15 +64,15 @@
     "                                       'NCES$_{m\\\\text{=64+}m\\\\text{=128}}$': '', 'NCES$_{m\\\\text{=32+}m\\\\text{=64+}m\\\\text{=128}}$': ''}\n",
     "                   }}\n",
     "    for kb in ['carcinogenesis', 'mutagenesis', 'semantic_bible', 'vicodi']:\n",
-    "        for model in ['celoe', 'eltl', 'ecii', 'evolearner', f'NCES_{kb_emb_model}', f'NCES_{kb_emb_model}_Ensemble']:\n",
-    "            if model not in [f'NCES_{kb_emb_model}', f'NCES_{kb_emb_model}_Ensemble']:\n",
+    "        for model in ['celoe', 'eltl', 'ecii', 'evolearner', f'NCES2_{kb_emb_model}', f'NCES2_{kb_emb_model}_Ensemble']:\n",
+    "            if model not in [f'NCES2_{kb_emb_model}', f'NCES2_{kb_emb_model}_Ensemble']:\n",
     "                rename_model = model.upper() if model != 'evolearner' else 'EvoLearner'\n",
     "                with open(f'datasets/{kb}/Results/{rename_model}_avg_results.json') as file:\n",
     "                    results = json.load(file)\n",
     "                mean = str(round(results[metric]['mean'],2)); std = str(round(results[metric]['std'],2))\n",
     "                mean, std = maybe_add_zero(mean, std)\n",
     "                Res[metric][' '.join(word.capitalize() for word in kb.split('_'))][rename_model] = mean+'$\\pm$'+std\n",
-    "            elif model == f'NCES_{kb_emb_model}':\n",
+    "            elif model == f'NCES2_{kb_emb_model}':\n",
     "                path = f'datasets/{kb}/Results/{model}.json'\n",
     "                if kb_emb_model == \"DistMult\":\n",
     "                    path = f'datasets/{kb}/Results/{model}_{kb_emb_model}.json'\n",
@@ -86,10 +86,10 @@
     "                    std = str(round(results[m][new_metric]['std'][0],2))\n",
     "                    mean, std = maybe_add_zero(mean, std)\n",
     "                    Res[metric][' '.join(word.capitalize() for word in kb.split('_'))][rename_model] = mean+'$\\pm$'+std\n",
-    "            elif model == f'NCES_{kb_emb_model}_Ensemble':\n",
+    "            elif model == f'NCES2_{kb_emb_model}_Ensemble':\n",
     "                path = f'datasets/{kb}/Results/{model}.json'\n",
     "                if kb_emb_model == \"DistMult\":\n",
-    "                    path = f'datasets/{kb}/Results/NCES_DistMult_Ensemble.json'\n",
+    "                    path = f'datasets/{kb}/Results/NCES2_DistMult_Ensemble.json'\n",
     "                with open(path) as file:\n",
     "                    results = json.load(file)\n",
     "                new_metric = rename_metric(metric)\n",
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "invisible-thread",
+   "id": "competitive-protein",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "early-shame",
+   "id": "curious-albania",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "automatic-outreach",
+   "id": "sharp-yahoo",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "cultural-album",
+   "id": "liked-petroleum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "gentle-regression",
+   "id": "hungarian-roots",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "satisfied-twelve",
+   "id": "understood-documentary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "looking-friendship",
+   "id": "hydraulic-crack",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "isolated-spell",
+   "id": "eastern-escape",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "restricted-palace",
+   "id": "finite-alignment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "prescribed-prompt",
+   "id": "promotional-assist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "honey-moscow",
+   "id": "vietnamese-cookbook",
    "metadata": {},
    "outputs": [],
    "source": []
